# conception

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  docker-compose.yaml  main.py  pyproject.toml  render.yaml  setup.sh
.github/workflows/: cd-react-frontend.yaml  cd-vercel.yaml  ci-azureml.yaml  ci-backend.yaml  ci-frontend.yaml  ci-htmx-frontend.yaml  ci.yaml  scheduled_vector_db_filling.yaml  vercel-deployment.yaml  vercel-preview.yaml
azureml/: Dockerfile  README.md  compute.yml  compute_embeddings_azml.py  compute_embeddings_on_az_ml.py  constants.py  main.py  pyproject.toml
azureml/src/: compute_embeddings.py  compute_word_embeddings.py  train.py
azureml/tests/: dummy_test.py
backend/: Dockerfile  main.py  pyproject.toml
backend/src/: constants.py  utils.py  vector_db.py  vector_db_clients.py
backend/tests/: test_api.py
front/: Conception.py  Dockerfile  config.toml  main.py  pyproject.toml
front/front/: app.py
front/pages/: 1_Vector_database.py  2_Map.py
front/src/: app.py  utils.py
front/src/containers/: query_most_similar_words.py  vector_db.py
front/tests/: dummy_test.py
htmx_frontend/: index.html  styles.css
llm_exp/: pyproject.toml  requirements.txt
outlines_exp/: .gitignore  metadata.yaml  pyproject.toml
outlines_exp/charts/: load_iris_histogram_s1.py
outlines_exp/data_loaders/: load_iris.py
outlines_exp/pipelines/conception/: metadata.yaml  triggers.yaml
outlines_exp/transformers/: train_model.py  train_test_split.py
react_frontend/: README.md  package-lock.json  package.json
react_frontend/src/: App.css  App.js  index.css
react_frontend/src/components/: CurriculumVitae.js  Header.js  HeaderMUI.js  WorkInProgress.js
react_frontend/src/components/CurriculumVitae/: CurriculumVitae.js  CurriculumVitae.module.css
react_frontend/src/components/CurriculumVitae/Contact/: Contact.js
react_frontend/src/components/CurriculumVitae/LinksSection/: LinksSection.js
src/: constants.py  main.py
src/conception/: app.py  constants.py  main.py  utils.py
terraform/: .terraform.lock.hcl  README.md  main.tf  variables.tf
