# pyproject.toml

[tool.poetry]
name = "conception"
version = "0.1.0"
description = "Investigate connection between words and concepts"
authors = ["Adrien Ruault <ruaultadrien@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
