# pyproject.toml

[tool.poetry]
name = "conception"
version = "0.1.0"
description = "Investigate connection between words and concepts"
authors = ["Adrien Ruault <ruaultadrien@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.26.0"
visiumlint = ">=0.14"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
english-words = "^2.0.1"
python-openstackclient = "^6.3.0"
langchain = "^0.0.325"
huggingface-hub = "<0.17.0"
sentence-transformers = "^2.2.2"
chromadb = "^0.4.15"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.pylint.master]
load-plugins = "pylint.extensions.docparams, pylint.extensions.docstyle"
ignore="""
build,
dist,
"""

[tool.pylint.messages_control]
disable = """
fixme,
too-few-public-methods,
"""

[tool.pylint.basic]
variable-rgx = "^[a-z][a-z0-9_]*$"
argument-rgx = "^[a-z][a-z0-9_]*$"

[tool.pylint.format]
max-line-length = "120"

[tool.pydocstyle]
add-ignore = "D107, D104, D103"
convention = "google"

[tool.mypy]
exclude = ["build", "dist"]