[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Adrien Ruault <ar@visium.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.329"
chromadb = "^0.4.15"
fastapi = "^0.104.1"
pydantic = "^2.4.2"
english-words = "^2.0.1"
ruff = "^0.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120