[tool.poetry]
name = "front"
version = "0.1.0"
description = "Streamlit frontend"
authors = ["Adrien Ruault <ar@visium.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.26.0"
requests = "^2.31.0"
ruff = "^0.3.4"
mypy = "^1.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["D", "PL", "I"]

# On top of the Google convention, disable `D417`, which requires
# documentation for every function parameter.
ignore = ["D417"]

[tool.ruff.lint.pydocstyle]
convention = "google"
