[tool.poetry]
name = "outlines-exp"
version = "0.1.0"
description = ""
authors = ["Adrien Ruault <ar@visium.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.4"
outlines = "^0.0.46"
pandera = "^0.19.3"
setuptools = "*"
transformers = {version = "^4.41.2", extras = ["torch"]}
openai = "^1.35.3"
tiktoken = "^0.7.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
