[tool.poetry]
name = "outlines-exp"
version = "0.1.0"
description = ""
authors = ["Adrien Ruault <ar@visium.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
outlines = "^0.0.44"
pandera = "^0.19.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
